plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}
jar {
    manifest {
        attributes 'Main-Class': 'main.java.com.app.mntr.Main'
    }
}
dependencies {
    implementation 'com.github.cliftonlabs:json-simple:4.0.1'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'com.h2database:h2:2.1.214'
}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}